# kafka-test-project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: testing.yml
postgres_data/base/16384/: 1249_fsm  1249_vm  1259  1259_vm  13407  2606  2606_vm  2608  2608_fsm  2608_vm  2610  2610_fsm  2610_vm  2615  2615_vm  2619
postgres_data/global/: 1260  1262  2671  pg_control
postgres_data/pg_stat/: pgstat.stat
src/: alembic.ini  app.py  config.py  test.db
src/alembic/: env.py
src/alembic/versions/: 764cca405873_.py  a14d9eac660e_.py
src/api/: routers.py
src/api/aplications/: routers.py  schemas.py  service.py
src/core/database/: __init__.py
src/core/database/models/: __init__.py  aplications.py  base.py
src/core/factories/: __init__.py  aplication_factory.py
src/core/kafka/: __init__.py  producer.py
src/core/kafka/bitnami/data/: meta.properties  recovery-point-offset-checkpoint
src/core/kafka/bitnami/data/Kafka-0/: partition.metadata
src/core/kafka/bitnami/zookeeper/data/version-2/: snapshot.1f  snapshot.38  snapshot.4a  snapshot.5a  snapshot.6e  snapshot.80  snapshot.94
src/tests/: conftest.py  test_aplications.py
